--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  background-color: #8c52ff;
+  background-color: #009fc7;
 }
 .container {
   font-size: 16px;
-  background-color: #ffffff;
+  background-color: #b7edfb;
   width: 90vw;
   max-width: 34em;
   position: absolute;
@@ -32,7 +32,7 @@ body {
 #options-container button {
   padding: 0.6em 1.2em;
   border: 3px solid #000000;
-  background-color: #ffffff;
+  background-color: #b7edfb;
   color: #000000;
   border-radius: 0.3em;
   text-transform: capitalize;
@@ -44,9 +44,9 @@ body {
   background-color: #efefef;
 }
 #options-container button.active {
-  background-color: #8c52ff;
+  background-color: #009fc7;
   border: 3px solid #000000;
-  color: #fff;
+  color: #b7edfb;
 }
 .letter-container {
   width: 100%;
@@ -56,14 +56,17 @@ body {
   gap: 0.6em;
 }
 #letter-container button {
-  height: 2.4em;
-  width: 2.4em;
+  height: 3em;
+  width: 3em;
   border-radius: 0.3em;
-  background-color: #ffffff;
+  background-color: #fff;
   cursor: pointer;
+  border: none;
+  color: #009fc7;
+  font-size: 16px;
 }
 .new-game-popup {
-  background-color: #ffffff;
+  background-color: #b7edfb;
   position: absolute;
   left: 0;
   top: 0;
@@ -85,7 +88,7 @@ body {
 canvas {
   display: block;
   margin: auto;
-  border: 10px solid #8c52ff;
+  border: 10px solid #009fc7;
   border-radius: 10px;
 }
 .hide {
@@ -105,9 +108,9 @@ canvas {
 #new-game-button {
   font-size: 1.25em;
   padding: 0.5em 1em;
-  background-color: #8c52ff;
+  background-color: #009fc7;
   border: 3px solid #000000;
-  color: #fff;
+  color: #b7edfb;
   border-radius: 0.2em;
   cursor: pointer;
 }
@@ -119,10 +122,20 @@ canvas {
 }
 
 h1 {
-  color: #fff;
+  color: #b7edfb;
   font-size: 45px;
   position: fixed;
-  top: 10%;
+  top: 5%;
   left: 50%;
   transform: translateX(-50%);
+}
+
+span.dashes {
+  color: #01556a;
+  font-size: 40px;
+}
+
+#hint-container {
+  color: #01556a;
+  font-size: 20px;
 }
